k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-api
  labels:
    app: backoffice-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: "52325"
        linkerd.io/inject: enabled        
      labels:
        app: backoffice-api
        version: v1
    spec:
      revisionHistoryLimit: 3
      progressDeadlineSeconds: 120
      strategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 0    
      imagePullSecrets:
        - name: azure-acr
      volumes:
      - name: diagnostics
        emptyDir: {}
      terminationGracePeriodSeconds: 30
      containers:
        - name: backoffice-api
          image: tianajoias.azurecr.io/tianajoiasapi:713467946.27
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http-port
              containerPort: 80
          volumeMounts:
            - mountPath: /tmp
              name: diagnostics
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 5    
            failureThreshold: 6          
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http-port
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 6
