k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-api
spec:
  selector:
    app: backoffice-api
    version: v1
  ports:
    - name: http-port
      port: 80
      targetPort: 80
  type: ClusterIP
